<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="560dp"
        android:src="@drawable/gradient_login_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:src="@drawable/ic_login_2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_login_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="61dp"
        android:layout_marginTop="89dp"
        android:src="@drawable/ic_login_3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/login_1"
        android:textColor="#121212"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@id/tv_login_subtitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_login_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/login_2"
        android:textColor="#888888"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/tv_login_create"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_login_create"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/shape_blue_btn_corners_50"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/login_3"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/tv_login_load"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_login_load"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/shape_white_btn_corners_50_stroke_1"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/login_4"
        android:textColor="#121212"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <include
        android:id="@+id/group_login_create"
        layout="@layout/item_login_create"
        android:visibility="gone"
        tools:visibility="gone"
        />

    <include
        android:id="@+id/group_login_load"
        layout="@layout/item_login_load"
        android:visibility="gone"
        tools:visibility="gone"
        />


</androidx.constraintlayout.widget.ConstraintLayout>