<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <View
        android:id="@+id/v_item_login_create_dismiss"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/translucent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/v_item_login_create_bg"
        android:layout_marginBottom="-20dp"
        />

    <View
        android:id="@+id/v_item_login_create_bg"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:background="@drawable/shape_white_btn_corners_top_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <View
        android:layout_width="40dp"
        android:layout_height="5dp"
        android:background="@drawable/shape_dialog_top_line_corners_5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/v_item_login_create_bg"
        android:layout_marginTop="10dp"
        />

    <ImageView
        android:id="@+id/iv_item_login_create_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_login_4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/v_item_login_create_bg"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:id="@+id/tv_item_login_create_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_login_create_1"
        android:textSize="28sp"
        android:textColor="@color/text_title"
        android:includeFontPadding="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_item_login_create_icon"
        android:layout_marginTop="30dp"
        />


    <TextView
        android:id="@+id/tv_item_login_create_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_login_create_2"
        android:textSize="15sp"
        android:textColor="@color/text_subtitle"
        android:includeFontPadding="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_item_login_create_title"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/tv_item_login_create_submit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_blue_btn_corners_50"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/item_login_create_3"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_item_login_create_subtitle"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/tv_item_login_create_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_login_create_4"
        android:textSize="13sp"
        android:includeFontPadding="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        android:padding="10dp"
        />






</androidx.constraintlayout.widget.ConstraintLayout>